tests/snapshots/integration_tests__snapshot_tests__array_init_addvar6.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_addvar6.vmt",
    status: Good,
    used_instantiations: [],
}
